--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,43 +1,25 @@
 {
-    "name": "Report Issue PWA",
-    "short-name": "PWA",
-    "start_url": "/",
-    "icons": [
-        {
-            "src": "images/icons/app-icon-48x48.png",
-            "sizes": "48x48"
-        },
-        {
-            "src": "images/icons/app-icon-96x96.png",
-            "sizes": "96x96"
-        },
-        {
-            "src": "images/icons/app-icon-144x144.png",
-            "sizes": "144x144"
-        },
-        {
-            "src": "images/icons/app-icon-192x192.png",
-            "sizes": "192x192"
-        },
-        {
-            "src": "images/icons/app-icon-256x256.png",
-            "sizes": "256x256"
-        },
-        {
-            "src": "images/icons/app-icon-384x384.png",
-            "sizes": "384x384"
-        },
-        {
-            "src": "images/icons/app-icon-512x512.png",
-            "sizes": "512x512"
-        }
-    ],
-    "scope": ".",
-    "display": "standalone",
-    "orientation": "any",
-    "background-color": "#fff",
-    "theme-color": "#3f51b5",
-    "description": "Issue reporting PWA",
-    "dir": "ltr",
-    "lang": "en-US"
+  "short_name": "React App",
+  "name": "Create React App Sample",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
