--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "clsx": "^1.1.1",
     "firebase": "^7.22.1",
     "google-map-react": "^2.1.6",
     "material-ui-search-bar": "^1.0.0",
@@ -23,7 +24,9 @@
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-firestore": "^0.5.7",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^2.0.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
