--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
     "firebase": "^7.22.1",
+    "firebaseui": "^4.7.1",
     "google-map-react": "^2.1.6",
     "material-ui-search-bar": "^1.0.0",
     "materialize-css": "^1.0.0-rc.2",
@@ -25,11 +26,10 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.5.7",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
